Cleaned unnecessary codes